<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginTop="5dp">

    <TextView
        android:id="@+id/titulo_aviso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_aviso"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/conteudo_aviso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conteudo_aviso"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/data_aviso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_aviso"
        android:textSize="12sp" />

</LinearLayout>