<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_header"
    android:id="@+id/activity_password"
    android:orientation="vertical">

    <TextView
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_fragment_pass"
        android:textColor="#fff"
        android:textStyle="bold"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="70dp"
        android:text="@string/lbl_info_login_password"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/password_login_field"
        style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="152dp"
        android:autofillHints="@string/password_login"
        android:ems="10"
        android:hint="@string/password_login"
        android:inputType="textPassword"
        android:textColor="@color/colorInputs"
        android:textColorHint="#fff" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/password_login_field"
        android:layout_centerVertical="true"
        android:text="@string/btn_next"
        android:background="@color/colorPrimary"
        android:textColor="#fff"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/lbl_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_login_field"
        android:layout_alignStart="@+id/password_login_field"
        android:layout_marginStart="2dp"
        android:layout_marginTop="148dp"
        android:text="@string/password_forget"
        android:textColor="@color/colorInputs" />

</RelativeLayout>