<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:layout_marginStart="20dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="20dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/nome_componente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/lbl_nome_componente"
        android:textSize="15sp"
        android:layout_marginStart="20dp"/>

    <TextView
        android:id="@+id/media_componente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/lbl_media_componente"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/nota_componente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="320dp"
        android:text="@string/lbl_nota_componente"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp"
        android:textStyle="bold" />

</RelativeLayout>