<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/home_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lbl_avisos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:text="@string/lbl_avisos"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="#3F51B5" />

    <Button
        android:id="@+id/btn_avisos"
        android:layout_width="136dp"
        android:layout_height="54dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:background="@color/colorPrimary"
        android:text="@string/lbl_card_avisos"
        android:textColor="#FFFf" />

    <Button
        android:id="@+id/btn_eventos"
        android:layout_width="136dp"
        android:layout_height="54dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="350dp"
        android:background="@color/colorPrimary"
        android:text="@string/lbl_card_eventos"
        android:textColor="#FFFf" />
</RelativeLayout>