<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_header">

    <TextView
        android:id="@+id/lbl_reset_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/lbl_reset_password"
        android:textColor="#fff"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lbl_reset_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:text="@string/lbl_reset_password_text"
        android:textColor="#fff"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/email_login"
        style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="181dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email_login"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorInputs"
        android:textColorHint="#fff"
        tools:targetApi="o" />

    <Button
        android:id="@+id/btn_send_email_recover_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/lbl_reset_password_text"
        android:layout_alignEnd="@+id/lbl_reset_password_text"
        android:layout_alignParentTop="true"
        android:layout_marginStart="99dp"
        android:layout_marginTop="295dp"
        android:layout_marginEnd="98dp"
        android:background="@color/colorPrimary"
        android:text="@string/btn_send_email_recover_password"
        android:textColor="#fff"
        android:textSize="15sp" />

</RelativeLayout>