<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/follow_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:scrollbarSize="2dp"
        android:textAlignment="center"
        android:textColor="#4566DB"
        android:layout_centerHorizontal="true"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lbl_fragment_follow"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/text_follow"
        android:textColor="#4566DB"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btn_calendar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimary"
        android:text="@string/lbl_info_calendar"
        android:textColor="#FFFf"
        android:layout_centerVertical="true"/>

    <Button
        android:id="@+id/btn_report"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="400dp"
        android:background="@color/colorPrimary"
        android:text="@string/lbl_info_report"
        android:textColor="#FFF" />

</RelativeLayout>